--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -65,7 +65,7 @@
             <h2 class="text-center section-title">À propos de moi</h2>
             <div class="row">
                 <div class="col-lg-6">
-                    <h3 class="mb-4">Développeur passionné avec 5 ans d'expérience</h3>
+                    <h3 class="mb-4">Développeur passionné avec 8 ans d'expérience</h3>
                     <p class="mb-4">Je suis un développeur web full stack spécialisé dans la création d'applications web modernes et performantes. Avec une solide expérience dans les technologies front-end et back-end, je peux prendre en charge tous les aspects du développement d'un projet.</p>
                     <p class="mb-4">Mon approche combine une attention particulière aux détails, une passion pour les solutions innovantes et un engagement envers la qualité du code.</p>
                     <div class="row">
@@ -125,7 +125,7 @@
     </section>
 
     <!-- Skills Section -->
-    <section id="skills" class="py-5">
+    <section id="skills" class="py-5 mt-3">
         <div class="container py-5">
             <h2 class="text-center section-title">Mes compétences</h2>
             <div class="row">
@@ -288,10 +288,10 @@
                         <p>sympadev@gmail.com</p>
                     </div>
                     <div class="social-icons text-center mt-4">
-                        <a href="#"><i class="fab bg-primary fa-github"></i></a>
-                        <a href="#"><i class="fab bg-primary fa-linkedin-in"></i></a>
-                        <a href="#"><i class="fab bg-primary fa-twitter"></i></a>
-                        <a href="#"><i class="fab bg-primary fa-instagram"></i></a>
+                        <a style="color: #0000;" href="#"><i class="fab fa-github"></i></a>
+                        <a style="color: #0000;" href="#"><i class="fab fa-linkedin-in"></i></a>
+                        <a style="color: #0000;" href="#"><i class="fab fa-twitter"></i></a>
+                        <a style="color: #0000;" href="#"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
                 <div class="col-lg-7">
@@ -326,7 +326,7 @@
     <footer class="text-center">
         <div class="container">
             <p class="mb-2">© 2025 Sympa Kalambay. Tous droits réservés.</p>
-            <p class="mb-0">Développeur Web Full Stack - Création de sites et application web sur mesure</p>
+            <p class="mb-0">Développeur Web Full Stack Python - Création de sites et applications web sur mesure</p>
         </div>
     </footer>
 
