--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Bienvenue sur mon site vitrine professionnel.">
     <meta name="robots" content="index, follow">
+    <meta name="google-site-verification" content="7L0G2k4VuKXS3_s2kykPmbOV0QynUflGzHJk8qF65q4" />
     <title>Sympa Kalambay</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
