--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -82,7 +82,7 @@
                         </div>
                     </div>
                     <!-- download pdf -->
-                        <form method="get" action="{% url 'download_cv' %}">
+                        <form method="post" action="{% url 'download_cv' %}">
                             {% csrf_token %}
                             <button type="submit" class="btn btn-primary">
                                 <i class="fas fa-download"></i> Télécharger CV
@@ -308,6 +308,7 @@
                         <div class="card-body p-5">
                             <h3 class="mb-4">Envoyez-moi un message</h3>
                             <form method="post">
+                                {% csrf_token %}
                                 <div class="row">
                                     <div class="col-md-6 mb-3">
                                         <input type="text" name="name" class="form-control" placeholder="Votre nom" required>
