--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -307,7 +307,7 @@
                     <div class="card border-0 shadow">
                         <div class="card-body p-5">
                             <h3 class="mb-4">Envoyez-moi un message</h3>
-                            <form method="post">
+                            <form method="post" action="{% url 'sendmail' %}">
                                 {% csrf_token %}
                                 <div class="row">
                                     <div class="col-md-6 mb-3">
