--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -54,8 +54,7 @@
                     <h2 class="mb-4">Développeur Senior Web Full Stack</h2>
                     <p class="lead mb-4">Je crée des applications web et logiciels, réactifs et performants avec les dernières technologies.</p>
                     <div class="d-flex gap-3">
-                        <a href="#portfolio" class="btn btn-light btn-lg">Voir mes projets</a>
-                        <a href="#contact" class="btn btn-outline-light btn-lg">Me contacter</a>
+                        <a href="#contact" class="btn btn-light btn-lg">Me contacter </a>
                     </div>
                 </div>
             </div>
